--- a/public/js/screens/home-screen.css
+++ b/public/js/screens/home-screen.css
@@ -2,4 +2,5 @@
 	color: gray;
     font-weight: normal;
     font-size: 18px;
+	margin: 15px 0px;
 }
